# vscode-db-viewer

./: .clippy.toml  .gitignore  .vscodeignore  Cross.toml  README copy.md  README.md  package-lock.json  package.json
examples/: test.sql
scripts/: cross-pre-build.sh
server/: Cargo.toml
server/src/: constant.rs  logger.rs  main.rs  parser.rs
server/src/command/: cmd.rs  mod.rs
server/src/db/: connection.rs  mod.rs  mysql.rs  postgres.rs  sqlite.rs
src/: client.ts  config.ts  constant.ts  extension.ts
src/controller/: connectionController.ts  workspaceController.ts
src/views/: statusBar.ts
