[package]
name = "db-viewer-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
tower-lsp = { version = "0.20.0", features = ["proposed"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7" }
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sqlparser = { version = "0.55.0" }
sqlx = { version = "0.8.5", features = [
    "sqlite",
    "runtime-tokio",
    "tls-native-tls",
    "mysql",
    "postgres",
    "chrono",
] }
once_cell = "1.18"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
